# securecommit

./: .gitignore  .pre-commit-hooks.yaml  .securecommit.yaml  Makefile  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: vulnerable_code.py
src/securecommit/: __init__.py  __main__.py  cli.py  config.py  formatter.py  models.py  scanner.py
src/securecommit/detectors/: __init__.py  allowlist.py  base.py  entropy.py  patterns.py  secrets.py
src/securecommit/hooks/: __init__.py  github_action.py  pre_commit.py
tests/: conftest.py  test_scanner.py
tests/test_detectors/: test_patterns.py  test_secrets.py
