[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "securecommit"
version = "0.1.0"
description = "Pre-commit security hooks and AI code review tool — catches secrets and security bugs before they reach the repo."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Joe Munene", email = "joe@securecommit.dev"},
]
keywords = ["security", "pre-commit", "secrets", "code-review", "sast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "gitpython>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
securecommit = "securecommit.cli:app"

[project.urls]
Homepage = "https://github.com/joemunene-by/securecommit"
Repository = "https://github.com/joemunene-by/securecommit"
Issues = "https://github.com/joemunene-by/securecommit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
# Typer declares CLI options via function calls in argument defaults; that is
# the framework's intended idiom, not the bug B008 warns about.
"src/securecommit/cli.py" = ["B008"]
# The git hooks legitimately shell out to `git` by name. S607 (partial path)
# is intentional for portability and S603 fires on every subprocess call.
"src/securecommit/hooks/*" = ["S603", "S607"]
# These two files are pattern registries: tables of regexes plus human-readable
# description/remediation prose. Wrapping that prose to 100 cols hurts more than
# it helps, so E501 is relaxed here only.
"src/securecommit/detectors/patterns.py" = ["E501"]
"src/securecommit/detectors/secrets.py" = ["E501"]
# Test fixtures embed sample secret strings (e.g. a JWT) that cannot be wrapped.
"tests/conftest.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
